--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'bootstrap/dist/css/bootstrap.css';
+
+.form-control.ng-touched.ng-invalid {
+    border: 1px solid red;
+}
+
+.inputError {
+    color: red;
+    font-size: 12px;
+}
