Added scrollable list on checkout page

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -12,7 +12,7 @@
     </li>
     <div class="d-flex justify-content-between align-content-center">
         <p>Total:</p>
-        <p class="total">{{total | currency}}</p>
+        <p class="total">{{totalCost | currency}}</p>
     </div>
     <hr/>
     <div class="d-flex">
